<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/button_bg"
    android:padding="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_projek"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/judul_textview_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judul"
                    android:textSize="18sp"
                    android:textColor="#000000"/>
                <TextView
                    android:id="@+id/tanggal_projek"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_project"
                    android:textStyle="italic" />
                <TextView
                    android:id="@+id/jam_projek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jam_project"
                    android:textStyle="italic"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/star_prio_projek"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_star_black_24dp"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
</LinearLayout>