<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="org.d3ifcool.aplikasi.todayActivity"
    android:id="@+id/drawLayout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <View
                android:layout_gravity="center"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@color/appColor"
                android:layout_marginTop="32dp"/>
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:background="@drawable/button_bg"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/day_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_hari"
                    android:textStyle="bold"
                    android:textSize="34sp"
                    android:textColor="#000000"/>
                <TextView
                    android:id="@+id/today_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_hariini"
                    android:textStyle="bold"
                    android:textSize="56sp"
                    android:textColor="#000000"/>
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/today_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_bulan"
                        android:textSize="24sp"
                        android:textColor="#000000"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp" />
                    <TextView
                        android:id="@+id/today_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tahun_hariini"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:background="@drawable/button_bg"
                android:orientation="vertical">
                <ListView
                    android:id="@+id/list_agenda"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_today"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/profile_handler">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>